correction (heart) et centrage loader version mobile

--- a/sass/_base-index.scss
+++ b/sass/_base-index.scss
@@ -6,7 +6,7 @@ body{
   
   .loader-container{
     position: fixed;
-    inset: 0 42% 0 0;
+    inset: 0 0 0 0;
     z-index: 9999;
     background-color: $white-color;
     opacity: 0.9;
@@ -380,6 +380,7 @@ body{
             position: relative;
             left: 87%;
             bottom: 23%;
+            width: 13%;
 
             .heart__empty{
               @include favorite-effect;   
