--- a/sass/_base-menus.scss
+++ b/sass/_base-menus.scss
@@ -107,6 +107,7 @@ body{
               .heartContainer{
                 position: relative;
                 left: 28px;
+               
   
                 @media (min-width:1025px){
                   margin: 3px;
@@ -117,10 +118,13 @@ body{
                 }
                 .heart__full{
                   @include favorite-full;
+                  right: 26px;
+                  top: 0;
                   @media (min-width:768px) and (max-width:1024px){
                     top: -25px;
                     left: 0;
                   }
+                 
                 }
               }
             }
