--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -17,7 +17,8 @@
  transition-duration: 1s;
  filter: opacity(0);
  position: relative;
- left: -26px;
+//  left: -26px;
+  top: -25px;
  transform: scale(0);
 }
 
