--- a/sass/style.css
+++ b/sass/style.css
@@ -57,7 +57,7 @@
 
 body .loader-container {
   position: fixed;
-  inset: 0 42% 0 0;
+  inset: 0 0 0 0;
   z-index: 9999;
   background-color: #ffffff;
   opacity: 0.9;
@@ -508,6 +508,7 @@ body .restoSection__container .restoCards .heart {
   position: relative;
   left: 87%;
   bottom: 23%;
+  width: 13%;
 }
 body .restoSection__container .restoCards .heart .heart__empty:hover + .heart__full {
   filter: opacity(1);
@@ -517,7 +518,7 @@ body .restoSection__container .restoCards .heart .heart__full {
   transition-duration: 1s;
   filter: opacity(0);
   position: relative;
-  left: -26px;
+  top: -25px;
   transform: scale(0);
 }
 body .footer {
